# shimmy

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md  flake.nix
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
bench/: CMakeLists.txt  check_regression.py  common.hpp  latency_bench.cpp  plot.py  ring_bench.cpp  smoke_bench.cpp  throughput_bench.cpp
bench/baselines/: README.md  latency.csv  throughput.csv
include/shimmy/: policies.hpp  ring.hpp  shm_segment.hpp  version.hpp  wait_strategy.hpp
include/shimmy/detail/: cache.hpp
tests/: CMakeLists.txt  ring_basic_test.cpp  ring_concurrency_test.cpp  ring_lap_test.cpp  shm_segment_test.cpp  smoke_test.cpp
